# shairplay

./: configure.ac
debian/init/: shairplay
src/: Makefile.am  shairplay.c
src/lib/: dnssd.c
